# usbx

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  SECURITY.md  rebuild.sh
.build/: install.sh  test.sh
.github/workflows/: main.yml  pre-commit.yml  regression_test.yml
common/: CMakeLists.txt
common/core/: CMakeLists.txt
common/core/inc/: ux_api.h  ux_class_audio10.h  ux_class_audio20.h  ux_dcd_sim_slave.h  ux_device_class_dpump.h  ux_device_stack.h  ux_hcd_sim_host.h  ux_host_class_dpump.h  ux_host_stack.h  ux_system.h  ux_user_sample.h  ux_utility.h
common/core/src/: ux_dcd_sim_slave_address_set.c  ux_dcd_sim_slave_endpoint_create.c  ux_dcd_sim_slave_endpoint_destroy.c  ux_dcd_sim_slave_endpoint_reset.c  ux_dcd_sim_slave_endpoint_stall.c  ux_dcd_sim_slave_endpoint_status.c  ux_dcd_sim_slave_frame_number_get.c  ux_dcd_sim_slave_function.c  ux_dcd_sim_slave_initialize.c  ux_dcd_sim_slave_initialize_complete.c  ux_dcd_sim_slave_state_change.c  ux_dcd_sim_slave_transfer_abort.c  ux_dcd_sim_slave_transfer_request.c  ux_dcd_sim_slave_transfer_run.c  ux_dcd_sim_slave_uninitialize.c  ux_device_class_dpump_activate.c  ux_device_class_dpump_change.c  ux_device_class_dpump_entry.c  (+203 more)
common/usbx_device_classes/: CMakeLists.txt
common/usbx_host_classes/: CMakeLists.txt
common/usbx_stm32_device_controllers/: ux_dcd_stm32.h  ux_dcd_stm32_callback.c  ux_dcd_stm32_endpoint_create.c  ux_dcd_stm32_endpoint_destroy.c  ux_dcd_stm32_endpoint_reset.c  ux_dcd_stm32_endpoint_stall.c  ux_dcd_stm32_endpoint_status.c  ux_dcd_stm32_frame_number_get.c  ux_dcd_stm32_function.c  ux_dcd_stm32_initialize.c  ux_dcd_stm32_initialize_complete.c  ux_dcd_stm32_interrupt_handler.c  ux_dcd_stm32_transfer_abort.c  ux_dcd_stm32_transfer_request.c  ux_dcd_stm32_transfer_run.c  ux_dcd_stm32_uninitialize.c
common/usbx_stm32_host_controllers/: ux_hcd_stm32.h  ux_hcd_stm32_callback.c  ux_hcd_stm32_controller_disable.c  ux_hcd_stm32_ed_obtain.c  ux_hcd_stm32_endpoint_create.c  ux_hcd_stm32_endpoint_destroy.c  ux_hcd_stm32_endpoint_reset.c  ux_hcd_stm32_entry.c  ux_hcd_stm32_frame_number_get.c  ux_hcd_stm32_initialize.c  ux_hcd_stm32_interrupt_handler.c  ux_hcd_stm32_least_traffic_list_get.c  ux_hcd_stm32_periodic_schedule.c  ux_hcd_stm32_port_disable.c  ux_hcd_stm32_port_enable.c  ux_hcd_stm32_port_reset.c  ux_hcd_stm32_port_resume.c  ux_hcd_stm32_port_status_get.c  ux_hcd_stm32_port_suspend.c  ux_hcd_stm32_power_down_port.c  ux_hcd_stm32_power_on_port.c  ux_hcd_stm32_request_bulk_transfer.c  ux_hcd_stm32_request_control_transfer.c  ux_hcd_stm32_request_periodic_transfer.c  ux_hcd_stm32_request_trans_finish.c  ux_hcd_stm32_request_trans_prepare.c  ux_hcd_stm32_request_transfer.c  ux_hcd_stm32_transfer_abort.c
docs/: USBX_Device_Stack_User_Guide.docx  USBX_Host_Stack_UVC_User_Guide.docx  USBX_Host_Stack_User_Guide.docx  guide-ux_dcd-driver_porting.md  guide-ux_device_class_implement.md  guide-ux_hcd-driver_porting.md  guide-ux_host_class_cdc_ecm-xxx_sample.md  guide-ux_host_class_implement.md  guide-ux_host_class_storage_exFAT_sample.md  guide-ux_host_class_video-nxp_1050_1060_sample.md  revision_history.txt
samples/: README.md  demo_device_hid_custom_rtos.c  demo_device_hid_custom_standalone.c  demo_device_hid_keyboard_rtos.c  demo_device_hid_keyboard_standalone.c  demo_device_hid_mouse_keyboard_rtos.c  demo_device_hid_mouse_keyboard_standalone.c  demo_device_hid_mouse_rtos.c  demo_device_hid_mouse_standalone.c  demo_usbx.c
samples/device_hid_mouse_rtos/: demo_device_hid_descriptors.c  demo_device_hid_descriptors.h  demo_device_hid_mouse.c  demo_device_hid_mouse.h  readme.md  ux_user.h
samples/device_hid_mouse_standalone/: demo_device_hid_descriptors.c  demo_device_hid_descriptors.h  demo_device_hid_mouse.c  demo_device_hid_mouse.h  readme.md  ux_user.h
scripts/: build.sh  install.sh  prepare_release.sh  test.sh
support/usbx_windows_host_files/: RNDIS_Template.inf
test/cmake/libs/: CMakeLists.txt  nx_user.h
test/cmake/usbx/: .run.sh  CMakeLists.txt  coverage.sh  run.sh  ux_user.h
test/cmake/usbx/regression/: CMakeLists.txt
test/cmake/usbx/samples/: CMakeLists.txt  fake.c
test/regression/: tx_event_flags.h  tx_initialize.h  tx_mutex.h  tx_semaphore.h  usbx_audio10_device_basic_test.c  usbx_audio10_device_feedback_test.c  usbx_audio10_iad_device_basic_test.c  usbx_audio10_iad_device_control_test.c  usbx_audio10_iad_device_interrupt_test.c  usbx_audio10_iad_host_basic_test.c  usbx_audio20_device_basic_test.c  usbx_audio20_device_controls_test.c  usbx_audio20_device_feedback_test.c  usbx_audio20_host_basic_test.c  usbx_bus_powered_hub_conn_to_self_and_bus_powered_hub_test.c  usbx_cdc_acm_basic_memory_test.c  usbx_cdc_acm_basic_test.c  usbx_cdc_acm_configure_test.c  usbx_cdc_acm_device_dtr_rts_reset_on_disconnect_test.c  usbx_cdc_ecm_alternate_setting_change_to_zero_test.c  usbx_cdc_ecm_basic_ipv6_test.c  usbx_cdc_ecm_basic_memory_test.c  usbx_cdc_ecm_basic_test.c  usbx_cdc_ecm_control_interface_no_interrupt_endpoint_test.c  usbx_cdc_ecm_data_iface_non_bulko_and_non_bulki_endpt_test.c  usbx_cdc_ecm_data_interface_no_bulk_in_endpoint_test.c  usbx_cdc_ecm_data_interface_no_bulk_out_endpoint_test.c  usbx_cdc_ecm_data_interface_setting_select_fails_test.c  usbx_cdc_ecm_default_data_interface_setting_with_endpoints_test.c  usbx_cdc_ecm_disconnect_and_reconnect_test.c  usbx_cdc_ecm_host_bulk_in_semaphore_create_fail_test.c  usbx_cdc_ecm_host_bulk_in_transfer_arming_during_deactivate_test.c  usbx_cdc_ecm_host_bulk_in_transfer_arming_during_link_down_test.c  usbx_cdc_ecm_host_bulk_in_transfer_fail_test.c  usbx_cdc_ecm_host_bulk_out_semaphore_create_fail_test.c  usbx_cdc_ecm_host_bulk_out_transfer_fail_test.c  usbx_cdc_ecm_host_bulki_arm_err_dueto_link_dn_thread_wait_test.c  usbx_cdc_ecm_host_bulko_transfer_arming_during_link_dn_test.c  usbx_cdc_ecm_host_first_interrupt_transfer_fail_test.c  usbx_cdc_ecm_host_int_notification_semaphore_create_fail_test.c  (+504 more)
usbx_windows_host_files/: CDC_ACM_Template.inf  CDC_ACM_Template_Win7_64bit.inf  CDC_Composite_Template.inf  CDC_ECM_Template.inf
(+813 files in other folders)
